fixed overflow mobile

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,5 +1,13 @@
+.skills-wrapper {
+  overflow-x: clip;
+  width: 100%;
+}
+
 .skills-container {
-  max-width: 100%;
+  position: relative;
+  contain: layout paint;
+  max-width: 100vw;
+  overflow-x: clip;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -11,7 +19,6 @@
   transform: translateX(80px);
   transition: opacity 0.8s ease, transform 0.8s ease;
   will-change: opacity, transform;
-  overflow: hidden;
 
   &.aos-animate {
     opacity: 1;
@@ -265,15 +272,15 @@
   }
 }
 
-
+/* Breakpoints */
 @media only screen and (min-width: 300px) {
-    .skill-set-container {
-        width: 300px;
-    }
+  .skill-set-container {
+    width: 300px;
+  }
 }
 
 @media screen and (min-width: 450px) {
-    .skill-set-container {
+  .skill-set-container {
     width: 365px;
   }
 
@@ -284,14 +291,14 @@
 }
 
 @media only screen and (min-width: 800px) {
-    .skill-set-container {
-      width: 365px;
-    }
+  .skill-set-container {
+    width: 365px;
+  }
 
-    .show-skill-container {
-      gap: 13px;
-      width: 365px;
-    }
+  .show-skill-container {
+    gap: 13px;
+    width: 365px;
+  }
 }
 
 @media only screen and (min-width: 925px) {
