--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
     margin: 0;
 }
 
-html {
+html body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
